# dalbit

./: .d.luau  .gitignore  CHANGELOG.md  Cargo.toml  README.md  bin.luau  pesde.toml
.github/workflows/: release.yml
src/cli/: fetch.rs  init.rs  mod.rs  transpile.rs
src/lib/: manifest.rs  polyfill.rs  transpile.rs
src/lib/modifiers/: convert_bit32.rs  remove_generalized_iteration.rs
